[package]
name = "stm"
version = "1.0.0"
authors = ["Emerson MX <emersonmx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = "2.33"
dirs = "3.0.1"
execute = "0.2.8"
regex = "1.3.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.1.0"
